2010-05-24  Karl Berry  <karl@tug.org>

	* tex.ch (sup_font_mem_size): increase from 4,000,000
	to 147,483,647 (the last nine digits of 2^31 - 1).  It seems to me
	this is merely an integer, so 2^31-1 itself should be safe, i.e.,
	a 2 could be prepended, but I just didn't want to go that far.

2010-05-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Fix the lib/libp.a rebuild rule.

2010-05-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cpascal.h (BIBXRETALLOCNOSET, BIBXRETALLOCSTRING): Cast size_t
	to long for printing to avoid warnings on 64Bit systems.
	* texmfmp.h (undumpcheckedthings, undumpuppercheckthings):
	Cast high limit to unsigned long for printing.

2010-05-18  Karl Berry  <karl@tug.org>

	* configure.ac (web2_version): use /pretest ident.

2010-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cpascal.h (BIBXRETALLOCSTRING): Need parens around new_size.
	From Akira, 02 May 2010 21:49:27.

	* bibtex.ch (MAX_GLOB_STRS): Changed from 20 back to 10. 

2010-05-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bibtex.ch: increase MAX_GLOB_STRS from 10 to 20, because pbibtex on
	windows crashes for some bst. it should be ok without increasing because
	of BIBXRETALLOCSTRING etc. don't know why, but MAX_GLOB_STRS = 20
	solves the problem.

2010-05-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* config.h: remove TEXDLL.

2010-05-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* help.h (PTFTOPLHELP): Document '-charcode-format'.

2010-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitype.test: Use installed cm fonts.

2010-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Require that 'int' has at least 4 bytes,
	allowing to reduce the use of 'integer' in C and C++ code.

2010-04-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.h: remove TEXDLL.
	* config.h: still there is TEXDLL for safety.

2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (INCLUDES): Remove '-I$(top_builddir)/..' and