@@ -1,3 +1,8 @@
+2010-05-31  Karl Berry  <karl@tug.org>
+
+	* synctex.c [__attribute__]: #define __attribute__ away if it is
+	not defined.  tlbuild mail, 28 May 2010 14:34:53.
+
 2010-05-24  Karl Berry  <karl@tug.org>
 
 	* tex.ch (sup_font_mem_size): increase from 4,000,000
